tools/hermes/tests/ui/fail_syntax.rs
fn main() {
    let x = ; //~ ERROR: Syntax error in Rust source
}
